src/objects/StudentCourse__c.object
<CustomObject>
    <description>Represents a course that a student may take at WGU. Multiple Assessments or Tasks may be required to complete the course.</description>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <description>The date the course was completed. This means all requirements &amp; assessments have been successfully accomplished for the course. Any result history will need to be tracked on the individual requirement not the course.</description>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an auto filled value that is related to Completed Date. This is used for quick coding convenience when all that needs to be known is that the course is completed or no.</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CourseDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the WGU Course definition record. This is static information that is the same for all students.</description>
        <label>Course Definition</label>
        <referenceTo>WGUCourse__c</referenceTo>
        <relationshipLabel>Student Courses</relationshipLabel>
        <relationshipName>StudentCourses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CourseType__c</fullName>
        <description>Type of the course. can be nondegree requirement</description>
        <label>Course Type</label>
        <picklist>
            <picklistValues>
                <fullName>Course</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non Degree Requirement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Courseregistrationid__c</fullName>
        <formula>Name &amp;&quot;-&quot;&amp; Student__r.PIDM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Courseregistrationid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EnrollDate__c</fullName>
        <description>The date that the student enrolled in the course.</description>
        <inlineHelpText>The date that the student enrolled in the course.</inlineHelpText>
        <label>Enroll Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InCorrectTerm__c</fullName>
        <description>The status on whether the course is in the correct term</description>
        <formula>IF(
  OR(
    AND(
      StudentCourseVersion__r.StudentCompletionCourse__r.InPreviousProgram__c = false,
      AND(
        OR(
          TEXT(StudentCourseVersion__r.Status__c) = &apos;Completed&apos;,
          TEXT(StudentCourseVersion__r.Status__c) = &apos;Failed&apos;),
        StudentTerm__r.Name != StudentCourseVersion__r.CompletedTermCode__c
      )
    ),
    AND(
      TEXT(StudentCourseVersion__r.Status__c) = &apos;Enrolled&apos;
      ,StudentTerm__r.Name != StudentCourseVersion__r.EnrollTermCode__c
    )
  ),
  IF(
    AND(
      StudentCourseVersion__r.StudentCompletionCourse__r.InPreviousProgram__c = true,
      OR(
        StudentTerm__c = null,
        StudentTerm__r.Name = &apos;000000&apos;
      )
    ),
    &apos;true&apos;,
    IF(
      AND(
        TEXT(StudentCourseVersion__r.Status__c) = &apos;Planned&apos;,
        StudentTerm__r.StartDate__c &gt;= TODAY()
      ),
      &apos;true&apos;,
      &apos;false&apos;
    )
  ),
  &apos;true&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the course&apos;s term code matches the term code it&apos;s currently in, then the value will be true, else it will be false</inlineHelpText>
        <label>In Correct Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the object is used as test data only.</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <externalId>true</externalId>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NumberOfDaysFromStartToEnd__c</fullName>
        <formula>EndDate__c - StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days from Start to End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the course (Completed,Enrolled,Planned).</description>
        <inlineHelpText>The status of the course (Completed,Enrolled,Planned).</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InProgress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentCourseVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student course version associated with this student course.</description>
        <label>Student Course Version</label>
        <referenceTo>StudentCourseVersion__c</referenceTo>
        <relationshipLabel>Student Courses</relationshipLabel>
        <relationshipName>StudentCourses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentDegreePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Degree Plan</label>
        <referenceTo>StudentDegreePlans__c</referenceTo>
        <relationshipLabel>Student Courses</relationshipLabel>
        <relationshipName>StudentCourses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentTerm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Term this course instance is scheduled</description>
        <label>Student Term</label>
        <referenceTo>StudentTerm__c</referenceTo>
        <relationshipLabel>Student Course</relationshipLabel>
        <relationshipName>StudentCourses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Course</relationshipLabel>
        <relationshipName>StudentCourses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TermSequence__c</fullName>
        <description>The order which the courses will be taken in the term if there is not a start date attached to the course.</description>
        <inlineHelpText>The order which the courses will be taken in the term if there is not a start date attached to the course.</inlineHelpText>
        <label>TermSequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WGULicenseRequirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>related WGU License Requirement if this course has the type of WGU License Requirement</description>
        <label>WGU License Requirement</label>
        <referenceTo>WGULicenseRequirement__c</referenceTo>
        <relationshipLabel>Student Courses</relationshipLabel>
        <relationshipName>Student_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Student Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>StudentCourseVersion__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CoursesWithNoTerm</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>StudentTerm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>StudentTerm__c</field>
            <operation>notContain</operation>
            <value>20</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Enrolled</value>
        </filters>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>equals</operation>
            <value>Jeff Wang</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>4/9/2013 12:00 AM</value>
        </filters>
        <label>CoursesWithNoTerm</label>
        <sharedTo>
            <role>IT_Group</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Student Course Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>